# nova25

./: .gitignore  NEW_ARCHITECTURE.md  PRD copy.md  PRD.md  PRD_chris.md  QUICKSTART.md  README.md  TEST_GUIDE.md  app.py  openrouter.md  pdf2points_example.json  requirements.txt  run.py
data/: cur_progress.json  db.json  knowledge_distributed_map.json  knowledge_distributed_map_example.json
nova25/: README.md
python/agent/: pyproject.toml
python/agent/src/agent/: __init__.py  agent.py  config.py  mcp_client.py  tool_manager.py  webui.py
python/agent/src/agent/prompts/: system_prompt.txt
python/agent/src/agent/templates/: webui.html
python/mcp_cheatsheet/: pyproject.toml
python/mcp_cheatsheet/src/mcp_cheatsheet/: __init__.py  database.py  models.py  server.py  tools.py
templates/: index.html
